updated the constituion

--- a/Constitution_Quiz.html
+++ b/Constitution_Quiz.html
@@ -14,8 +14,8 @@
     
     <link href="/dist/output.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="Styles/AoBR.css"> -->
-    <script src="JS/GFR_Quiz.js"></script>
-    <script src="JS/GFR_DB.js"></script>
+    <script src="JS/Constitution_DB.js"></script>
+    <script src="JS/Constitution_Quiz.js"></script>
     <script src="JS/common.js"></script>
     <title>GFR Quiz | Leapfrog</title>
 </head>
