--- a/Constitution_Quiz.html
+++ b/Constitution_Quiz.html
@@ -157,9 +157,9 @@
     <section class="results" id="evaluation">
 
         <div class="bg-green-100 rounded-lg py-3 px-3 mb-2 text-base w-11/12" role="alert">
-            <p class="text-gray-700 text-base leading-tight font-medium mb-1">Remarks : </p>
+            <p class="text-gray-700 text-base leading-tight font-medium mb-1" style="margin-top:0.5rem">Remarks : </p>
             <p class="text-green-700 text-sm mb-1" id="explanation">
-                 Some quick example text to build on the card title and make up the bulk of the card's
+                 Some quick example text to build on tshe card title and make up the bulk of the card's
                  content.
             </p>
         
