added google tag manager

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-N947LZT');</script> -->
     <!-- End Google Tag Manager -->
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KT2833G');</script>
+    <!-- End Google Tag Manager -->
+
+
     <meta name="msvalidate.01" content="0B9D253D64237E9C3E3FB1219CC4A35A" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,6 +49,11 @@
 <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N947LZT"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
 <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KT2833G"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 	
  <h1 class="h1Tag">The Complete Allocation of Business Rules (AoBR) as on March 2022. It provides a simplified access to AoBR. Ministry and Department wise work allocated under Allocation of Business Rules, 1961, in convenient manner. Take Unlimited Quiz on AoBR to test yourself before the exam. Search through the work items to locate which ministry or department it is allocated to. The aim is to help the aspirants with their Limited Departmental Competitive Examination for SO/ PS Grade.</h1>
 
