--- a/AoBR.html
+++ b/AoBR.html
@@ -10,6 +10,18 @@
     })(window,document,'script','dataLayer','GTM-N947LZT');</script> -->
     <!-- End Google Tag Manager -->
 
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N2REWFP0CC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N2REWFP0CC');
+</script>
+
+
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
