--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             
                             <div class="text-center" style="margin:1em auto;">
 
-                                <a class="btnClickHere" href="AoBR.html" id="list_AOBR">Complete AoBR (free)
+                                <a class="btnClickHere" href="AoBR.html" id="list_AOBR" style="width: 55%;">Complete AoBR (free)
 
                                     <i class="material-symbols-outlined" style="font-size: 1.1rem;vertical-align:bottom;">double_arrow
                                     </i>
