updated aobr and made style changes
completed the Leave Rules

--- a/CCS_Leave_Rules.html
+++ b/CCS_Leave_Rules.html
@@ -37,7 +37,7 @@
     <script src="JS/LeaveRules_Quiz.js"></script>
     <script src="JS/LeaveRules_DB.js"></script>
     <script src="JS/common.js"></script>
-    <title>GFR Quiz | Leapfrog</title>
+    <title>Leave Rules Quiz | Leapfrog</title>
 </head>
 <body>
 
@@ -118,17 +118,17 @@
         
     <section class="flex pageHeading">
 
-        <div class="left-title"><span class="test">CCS Leave Rules Quiz</span>  </div>
-        <div class="right-title"> Question No: <span id="qno"></span> of 10</div>
+        <div class="left-title"><span class="test" style="font-size: 1rem;">CCS Leave Rules Quiz</span>  </div>
+        <div style="font-size: 1rem;" class="right-title"> Question No: <span id="qno"></span> of 10</div>
     </section>
     
         <section class="main-content">
 
-       <div class="question" id="questionTitle"> 
+       <div class="question" id="questionTitle" style="font-size: 1rem;"> 
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit velit laborum architecto!
        </div>
 
-       <div class="options-container" id="optionsBox">
+       <div class="options-container" id="optionsBox" style="font-size: 0.9rem;">
 
             <div class="options" data-options>
                 <input type="radio" id="option1" name="option" value="HTML">
