--- a/GFR_Quiz.html
+++ b/GFR_Quiz.html
@@ -119,7 +119,7 @@
     <section class="flex pageHeading">
 
         <div class="left-title"><span class="test">GFR Quiz</span>  </div>
-        <div class="right-title"> Question No: <span id="qno"></span> of 10</div>
+        <div style="font-size: 1rem;" class="right-title"> Question No: <span id="qno"></span> of 10</div>
     </section>
     
         <section class="main-content">
