--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
         </div>
 
-        <div style="background: linear-gradient(150deg, rgb(255, 255, 255) 0%, rgb(247, 208, 202) 100%);margin-top: 1rem;">
+        <div style="margin-top: 1rem;">
             <img class="rounded-t-lg w-11/12 mx-auto" src="/Images/subscriptionLogo.png" alt="" >
         </div>
 
