--- a/AoBR_Premium.html
+++ b/AoBR_Premium.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 		    
 		    <div class="links-sidebar">
-		    	<a href="AoBR_Premium.html"> <i class="material-symbols-outlined">quiz</i> <p>Test Quiz on AoBR</p> </a>
+		    	<a href="AoBR_Premium.html"> <i class="material-symbols-outlined">quiz</i> <p>AoBR Quiz</p> </a>
 		    </div>
 
 		    <div class="links-sidebar">
@@ -97,11 +97,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		    </div>
 
             <div class="links-sidebar">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">receipt_long</i><p>GFR quiz</p></a>
+		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR quiz</p></a>
 		    </div>
 
             <div class="links-sidebar">
 		    	<a href="Constitution_Quiz.html"> <i class="material-symbols-outlined">gavel</i><p>Constitution Quiz</p></a>
+		    </div>
+
+            <div class="links-sidebar">
+		    	<a href="CCS_Leave_Rules.html"> <i class="material-symbols-outlined">calendar_month</i><p>Leave Rules Quiz</p></a>
+		    </div>
+            <div class="links-sidebar">
+		    	<a href="CCS_Pension_Rules.html"> <i class="material-symbols-outlined">elderly_woman</i><p>Pension Rules Quiz</p></a>
 		    </div>
 
             <div id="logOutBtn" style="text-align:center; margin-top: 2rem; font-size: 1rem;"><a href="index.html" id="sideMenu-Button">Log Out</a></div>
