--- a/GFR_Quiz.html
+++ b/GFR_Quiz.html
@@ -73,7 +73,7 @@
 			</div>
 		    
 		    <div class="links-sidebar">
-		    	<a href="AoBR_Premium.html"> <i class="material-symbols-outlined">quiz</i> <p>Test Quiz on AoBR</p> </a>
+		    	<a href="AoBR_Premium.html"> <i class="material-symbols-outlined">quiz</i> <p>AoBR Quiz</p> </a>
 		    </div>
 
 		    <div class="links-sidebar">
@@ -81,11 +81,18 @@
 		    </div>
 
             <div class="links-sidebar">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">receipt_long</i><p>GFR quiz</p></a>
+		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR quiz</p></a>
 		    </div>
 
             <div class="links-sidebar">
 		    	<a href="Constitution_Quiz.html"> <i class="material-symbols-outlined">gavel</i><p>Constitution Quiz</p></a>
+		    </div>
+
+            <div class="links-sidebar">
+		    	<a href="CCS_Leave_Rules.html"> <i class="material-symbols-outlined">calendar_month</i><p>Leave Rules Quiz</p></a>
+		    </div>
+            <div class="links-sidebar">
+		    	<a href="CCS_Pension_Rules.html"> <i class="material-symbols-outlined">elderly_woman</i><p>Pension Rules Quiz</p></a>
 		    </div>
 
             <div id="logOutBtn" style="text-align:center; margin-top: 2rem; font-size: 1rem;"><a href="index.html" id="sideMenu-Button">Log Out</a></div>
