added conduct rules quiz
added conduct rules quiz

--- a/GFR_Quiz.html
+++ b/GFR_Quiz.html
@@ -81,7 +81,7 @@
 		    </div>
 
             <div class="links-sidebar">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR quiz</p></a>
+		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
 
             <div class="links-sidebar">
