added conduct and CCA

--- a/AoBR_lookUp.html
+++ b/AoBR_lookUp.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class="links-sidebar">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR quiz</p></a>
+		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
 
             <div class="links-sidebar">
@@ -101,6 +101,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		    </div>
             <div class="links-sidebar">
 		    	<a href="CCS_Pension_Rules.html"> <i class="material-symbols-outlined">elderly_woman</i><p>Pension Rules Quiz</p></a>
+		    </div>
+
+            <div class="links-sidebar">
+		    	<a href="CCS_Conduct_Rules.html"> <i class="material-symbols-outlined">conditions</i><p>Conduct Rules Quiz</p></a>
+		    </div>
+
+            <div class="links-sidebar">
+		    	<a href="CCS_CCA_Rules.html"> <i class="material-symbols-outlined">balance</i><p>CCA Rules Quiz</p></a>
 		    </div>
 
             <div id="logOutBtn" style="text-align:center; margin-top: 2rem;"><a href="index.html" id="sideMenu-Button">Log Out</a></div>
