--- a/CCS_Conduct_Rules.html
+++ b/CCS_Conduct_Rules.html
@@ -37,7 +37,7 @@
     <script src="JS/ConductRules_Quiz.js"></script>
     <script src="JS/ConductRules_DB.js"></script>
     <script src="JS/common.js"></script>
-    <title>Leave Rules Quiz | Leapfrog</title>
+    <title>Conduct Rules Quiz | Leapfrog</title>
 </head>
 <body>
 
@@ -125,7 +125,7 @@
         
     <section class="flex pageHeading">
 
-        <div class="left-title"><span class="test" style="font-size: 1rem;">CCS (Conduct) Rules Quiz</span>  </div>
+        <div class="left-title"><span class="test" style="font-size: 1rem;">CCS (Conduct) Rules</span>  </div>
         <div style="font-size: 1rem;" class="right-title"> Question No: <span id="qno"></span> of 10</div>
     </section>
     
