--- a/CCS_Leave_Rules.html
+++ b/CCS_Leave_Rules.html
@@ -81,7 +81,7 @@
 		    </div>
 
             <div class="links-sidebar">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR quiz</p></a>
+		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
 
             <div class="links-sidebar">
@@ -93,6 +93,14 @@
 		    </div>
             <div class="links-sidebar">
 		    	<a href="CCS_Pension_Rules.html"> <i class="material-symbols-outlined">elderly_woman</i><p>Pension Rules Quiz</p></a>
+		    </div>
+
+            <div class="links-sidebar">
+		    	<a href="CCS_Conduct_Rules.html"> <i class="material-symbols-outlined">conditions</i><p>Conduct Rules Quiz</p></a>
+		    </div>
+
+            <div class="links-sidebar">
+		    	<a href="CCS_CCA_Rules.html"> <i class="material-symbols-outlined">balance</i><p>CCA Rules Quiz</p></a>
 		    </div>
 
             <div id="logOutBtn" style="text-align:center; margin-top: 2rem; font-size: 1rem;"><a href="index.html" id="sideMenu-Button">Log Out</a></div>
