--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 	
- <h1 class="h1Tag">The Complete Allocation of Business Rules (AoBR) as on March 2022. It provides a simplified access to AoBR. Ministry and Department wise work allocated under Allocation of Business Rules, 1961, in convenient manner. Take Unlimited Quiz on AoBR to test yourself before the exam. Search through the work items to locate which ministry or department it is allocated to. The aim is to help the aspirants with their Limited Departmental Competitive Examination for SO/ PS Grade.</h1>
+ <h1 class="h1Tag">Get a simplified access to the Complete Allocation of Business Rules (AoBR) and MCQs on GFR, Conduct Rules, CCS (CCA) Rules, CCS (Pension) Rules, CCS (Leave) Rules, Constitution. It provides a simplified access to AoBR. Ministry and Department wise work allocated under Allocation of Business Rules, 1961, in convenient manner. Take Unlimited Quiz on AoBR to test yourself before the exam.</h1>
 
     <!-- SIDE MENU -->
 
