--- a/sampleTest.html
+++ b/sampleTest.html
@@ -97,6 +97,14 @@
 		    	<a href="CCS_Pension_Rules.html"> <i class="material-symbols-outlined">elderly_woman</i><p>Pension Rules Quiz</p></a>
 		    </div>
 
+            <div class="links-sidebar">
+		    	<a href="CCS_Conduct_Rules.html"> <i class="material-symbols-outlined">conditions</i><p>Conduct Rules Quiz</p></a>
+		    </div>
+
+            <div class="links-sidebar">
+		    	<a href="CCS_CCA_Rules.html"> <i class="material-symbols-outlined">balance</i><p>CCA Rules Quiz</p></a>
+		    </div>
+
             <div id="logOutBtn" style="text-align:center; margin-top: 2rem; font-size: 1rem;"><a href="index.html" id="sideMenu-Button">Log Out</a></div>
             
 
