--- a/Constitution_Quiz.html
+++ b/Constitution_Quiz.html
@@ -215,7 +215,7 @@
         </div>
 
         <button id="tryAgain" class="button">
-            Try Again
+            Take Another Test
         </button>
             
 
