--- a/GFR_Quiz.html
+++ b/GFR_Quiz.html
@@ -221,7 +221,7 @@
         </div>
 
         <button id="tryAgain" class="button">
-            Try Again
+           Take Another Test
         </button>
             
 
