--- a/AoBR_Premium.html
+++ b/AoBR_Premium.html
@@ -240,7 +240,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
 
         <button id="tryAgain" class="button">
-            Try Again
+            Take Another Test
         </button>
             
 
