--- a/AoBR_Quiz.html
+++ b/AoBR_Quiz.html
@@ -127,7 +127,7 @@
         </div>
 
         <button id="tryAgain" class="button">
-            Try Again
+            Take Another Test
         </button>
             
 
