--- a/CCS_Conduct_Rules.html
+++ b/CCS_Conduct_Rules.html
@@ -213,7 +213,7 @@
         </div>
 
         <button id="tryAgain" class="button">
-            Try Again
+            Take Another Test
         </button>
             
 
