--- a/sampleTest.html
+++ b/sampleTest.html
@@ -238,7 +238,7 @@
         </div>
 
         <button id="tryAgain" class="button">
-            Try Again
+            Take Another Test
         </button>
             
 
