added DFPR and RTI
added DFPR and RTI

--- a/Constitution_Quiz.html
+++ b/Constitution_Quiz.html
@@ -79,6 +79,14 @@
 		    </div>
 
             <div class="links-sidebar">
+		    	<a href="DFPR.html"> <i class="material-symbols-outlined">approval_delegation</i><p>DFPR Quiz</p></a>
+		    </div>
+            
+            <div class="links-sidebar">
+                <a href="RTI.html"> <i class="material-symbols-outlined">tips_and_updates</i><p>RTI Quiz</p></a>
+		    </div>
+
+            <div class="links-sidebar">
 		    	<a href="Constitution_Quiz.html"> <i class="material-symbols-outlined">gavel</i><p>Constitution Quiz</p></a>
 		    </div>
 
