--- a/AoBR_Premium.html
+++ b/AoBR_Premium.html
@@ -99,6 +99,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="links-sidebar">
 		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
+            <div class="links-sidebar">
+		    	<a href="DFPR.html"> <i class="material-symbols-outlined">approval_delegation</i><p>DFPR Quiz</p></a>
+		    </div>
+            
+            <div class="links-sidebar">
+                <a href="RTI.html"> <i class="material-symbols-outlined">tips_and_updates</i><p>RTI Quiz</p></a>
+		    </div>
 
             <div class="links-sidebar">
 		    	<a href="Constitution_Quiz.html"> <i class="material-symbols-outlined">gavel</i><p>Constitution Quiz</p></a>
