Introduced the segregated option
Options for subscribing different package of Paper 1 and Paper 2 introduced.

--- a/AoBR.html
+++ b/AoBR.html
@@ -86,47 +86,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<div id="myLinks">
             <p>MENU</p>
-			<div class="links-sidebar">
+			<div class="links-sidebar paper1">
 				<a href="AoBR.html"><i class="material-symbols-outlined">fact_check</i><p>Complete AoBR</p></a>
 			</div>
 		    
-		    <div class="links-sidebar">
+		    <div class="links-sidebar paper1">
 		    	<a href="AoBR_Premium.html"> <i class="material-symbols-outlined">quiz</i> <p>AoBR Quiz</p> </a>
 		    </div>
 
-		    <div class="links-sidebar">
+		    <div class="links-sidebar paper1">
 		    	<a href="AoBR_lookUp.html"> <i class="material-symbols-outlined">manage_search</i><p>AoBR Lookup</p></a>
 		    </div>
 
-            <div class="links-sidebar">
+            <div class="links-sidebar paper2">
 		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
 
-            <div class="links-sidebar">
+            <div class="links-sidebar paper2">
 		    	<a href="DFPR.html"> <i class="material-symbols-outlined">approval_delegation</i><p>DFPR Quiz</p></a>
 		    </div>
             
-            <div class="links-sidebar">
+            <div class="links-sidebar paper1">
                 <a href="RTI.html"> <i class="material-symbols-outlined">tips_and_updates</i><p>RTI Quiz</p></a>
 		    </div>
 
-            <div class="links-sidebar">
+            <div class="links-sidebar paper1">
 		    	<a href="Constitution_Quiz.html"> <i class="material-symbols-outlined">gavel</i><p>Constitution Quiz</p></a>
 		    </div>
 
 
-            <div class="links-sidebar">
+            <div class="links-sidebar paper2">
 		    	<a href="CCS_Leave_Rules.html"> <i class="material-symbols-outlined">calendar_month</i><p>Leave Rules Quiz</p></a>
 		    </div>
-            <div class="links-sidebar">
+            <div class="links-sidebar paper2">
 		    	<a href="CCS_Pension_Rules.html"> <i class="material-symbols-outlined">elderly_woman</i><p>Pension Rules Quiz</p></a>
 		    </div>
 
-            <div class="links-sidebar">
+            <div class="links-sidebar paper2">
 		    	<a href="CCS_Conduct_Rules.html"> <i class="material-symbols-outlined">conditions</i><p>Conduct Rules Quiz</p></a>
 		    </div>
 
-            <div class="links-sidebar">
+            <div class="links-sidebar paper2">
 		    	<a href="CCS_CCA_Rules.html"> <i class="material-symbols-outlined">balance</i><p>CCA Rules Quiz</p></a>
 		    </div>
 
