--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div>
                         <div>
-                            <p>Make UPI payment for one of the tailored subscription options below:</p>
+                            <p>Make UPI payment for one of the tailored subscription options:</p>
                             <div style="display: flex; gap: 1rem; margin-top: 0.5rem;">
 
                                 <div style="background-color: #07b6ad; padding: 10px 15px; border-radius: 10px; box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2); color: white; font-family: Arial, sans-serif; text-align: center;">
@@ -866,7 +866,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     
                     <div>
-                        Send the payment screenshot to the WhatsApp number below. Credentials will be provided shortly, per our T&C.
+                        WhatsApp us the payment screenshot. Credentials will be provided shortly, per our T&C.
 
                         <div style="color:rgb(241, 45, 45); background-color: rgb(250, 240, 239); padding: 0.5rem; margin-top: 0.5rem; border-radius: 5px;">
 
