corrected the quiz

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="pricing-options">
 
                     <!-- Paper 1 Pricing -->
-                    <div class="pricing-card paper1">
+                    <div class="pricing-card paper_1">
                         <p style="font-size: large;">For Paper 1</p>
                         <h4><s>Rs 849/-</s></h4>
                         <h3 style="font-size: x-large;">Rs 449/-</h3>
@@ -281,7 +281,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
 
                     <!-- Paper 2 Pricing -->
-                    <div class="pricing-card paper2">
+                    <div class="pricing-card paper_2">
                         <p style="font-size: large;">For Paper 2</p>
                         <h4><s>Rs 849/-</s></h4>
                         <h3 style="font-size: x-large;">Rs 449/-</h3>
