added menu option for Parl Proc
also added smooth scrolling after click on next quiz

--- a/AoBR_lookUp.html
+++ b/AoBR_lookUp.html
@@ -104,6 +104,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		    	<a href="Constitution_Quiz.html"> <i class="material-symbols-outlined">gavel</i><p>Constitution Quiz</p></a>
 		    </div>
 
+            <div class="links-sidebar paper1">
+		    	<a href="PP_Quiz.html"> <i class="material-symbols-outlined">hub</i><p>Parl Procedure Quiz</p></a>
+		    </div>
+
             <div class="links-sidebar paper2">
 		    	<a href="CCS_Leave_Rules.html"> <i class="material-symbols-outlined">calendar_month</i><p>Leave Rules Quiz</p></a>
 		    </div>
