--- a/PP_Quiz.html
+++ b/PP_Quiz.html
@@ -38,6 +38,8 @@
     <script src="JS/PP_DB.js"></script>
     <script src="JS/common.js"></script>
     <title>GFR Quiz | Leapfrog</title>
+
+
 </head>
 <body>
 
@@ -97,7 +99,7 @@
 		    </div>
 
             <div class="links-sidebar paper1">
-		    	<a href="PP_Quiz.html"> <i class="material-symbols-outlined">hub</i><p>Parliament Quiz</p></a>
+		    	<a href="PP_Quiz.html"> <i class="material-symbols-outlined">hub</i><p>Parl Procedure Quiz</p></a>
 		    </div>
 
             <div class="links-sidebar paper2">
