--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 	
- <h1 class="h1Tag">Get a simplified access to the Complete Allocation of Business Rules (AoBR) and MCQs on GFR, Conduct Rules, CCS (CCA) Rules, CCS (Pension) Rules, CCS (Leave) Rules, Constitution. It provides a simplified access to AoBR. Ministry and Department wise work allocated under Allocation of Business Rules, 1961, in convenient manner. Take Unlimited Quiz on AoBR to test yourself before the exam.</h1>
+ <h1 class="h1Tag">Get a simplified access to the Complete Allocation of Business Rules (AoBR) and on all topics of Limited Departmental Competitive Exam (LDCE)conducted by UPSC. We have MCQs on GFR, Conduct Rules, CCS (CCA) Rules, CCS (Pension) Rules, CCS (Leave) Rules, Constitution, RTI Act, 2005, DFPR, 1978, Parliamentary Procedure. It provides a simplified access to AoBR. Ministry and Department wise work allocated under Allocation of Business Rules, 1961, in convenient manner. Take Unlimited Quiz on AoBR as well as on other topics of Paper 1 and Paper 2 of LDCE to test yourself before the exam.</h1>
 
     <!-- SIDE MENU -->
 
@@ -115,6 +115,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="links-sidebar paper1">
                 <a href="Constitution_Quiz.html"> <i class="material-symbols-outlined">gavel</i><p>Constitution Quiz</p></a>
             </div>
+
+            <div class="links-sidebar paper1">
+		    	<a href="PP_Quiz.html"> <i class="material-symbols-outlined">hub</i><p>Parl Procedure Quiz</p></a>
+		    </div>
 
             <div class="links-sidebar paper2">
 		    	<a href="CCS_Leave_Rules.html"> <i class="material-symbols-outlined">calendar_month</i><p>Leave Rules Quiz</p></a>
@@ -170,6 +174,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div id="loginName">
             Welcome  <span>XYZ</span> 
         </div>
+
+        <div id="toast">
+            <!-- <i class="material-icons" style="color:rgb(175, 80, 48);">hub</i> -->
+            <div id="desc">
+                <p>MCQs on Parliamentary Procedure are now available!</p>   
+            </div>
+        </div>
+        
 
         <div id="mainIntro">
 
@@ -264,10 +276,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
         </div>
 
-        <div id="subscriptionPriceLogo" style="padding: 20px; background-color: #f6f7fb; font-family: 'Helvetica Neue', Arial, sans-serif;">
+        <div id="subscriptionPriceLogo" style="padding: 20px; background-color: whitesmoke; font-family: 'Helvetica Neue', Arial, sans-serif;">
 
                     <!-- Heading -->
-                <h2 class="pricing-header gradient-text">Annual Pricing Plan</h2>
+                <h2 class="pricing-header gradient-text">Subscription Price</h2>
 
                 <!-- Pricing Options Display -->
                 <div class="pricing-options">
