--- a/Constitution_Quiz.html
+++ b/Constitution_Quiz.html
@@ -90,6 +90,10 @@
 		    	<a href="Constitution_Quiz.html"> <i class="material-symbols-outlined">gavel</i><p>Constitution Quiz</p></a>
 		    </div>
 
+            <div class="links-sidebar paper1">
+		    	<a href="PP_Quiz.html"> <i class="material-symbols-outlined">hub</i><p>Parl Procedure Quiz</p></a>
+		    </div>
+
             <div class="links-sidebar paper2">
 		    	<a href="CCS_Leave_Rules.html"> <i class="material-symbols-outlined">calendar_month</i><p>Leave Rules Quiz</p></a>
 		    </div>
