--- a/GFR_Chapter.html
+++ b/GFR_Chapter.html
@@ -161,9 +161,9 @@
                 <p class="card_CA_Text" style="color: #4f0cab;"> Rule 264 to Rule 324 <br><span style="font-size: 0.7rem;">B&A for Externally Aided Projects, Govt. Guarantees and Misc.</span></p>
             </div>
 
-            <!-- <div id="Jun_CA" class="card_CA" style="background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);">
-                <p class="card_CA_Text" style="color: #74410d;">June, 2023</p>
-            </div> -->
+            <div id="GFR_All" class="card_CA" style="background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);">
+                <p class="card_CA_Text" style="color: #74410d;">Full GFR <br><span style="font-size: 0.7rem;">Questions from entire GFR</span></p>
+            </div>
 
         </div> 
 
@@ -206,7 +206,7 @@
         document.getElementById('GFR_upto206').addEventListener('click', function(){window.location.href = 'GFR_upto206.html'});
         document.getElementById('GFR_upto263').addEventListener('click', function(){window.location.href = 'GFR_upto263.html'});
         document.getElementById('GFR_upto324').addEventListener('click', function(){window.location.href = 'GFR_upto324.html'});
-        // document.getElementById('Nov_CA').addEventListener('click', function(){window.location.href = 'CA_November22.html'});
+        document.getElementById('GFR_All').addEventListener('click', function(){window.location.href = 'GFR_Quiz.html'});
         
 </script>
 
