--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		    </div>
 
             <div class="links-sidebar paper2">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
+		    	<a href="GFR_Chapter.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
 
             <div class="links-sidebar paper2">
@@ -515,7 +515,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             
                             <div class="text-center" style="margin:1em auto;">
 
-                                <a class="btnClickHere" href="GFR_Quiz.html" id="quizGFR">Take the Quiz
+                                <a class="btnClickHere" href="GFR_Chapter.html" id="quizGFR">Take the Quiz
 
                                     <i class="material-symbols-outlined" style="font-size: 1.1rem;vertical-align:bottom;">double_arrow
                                     </i>
