--- a/sampleTest.html
+++ b/sampleTest.html
@@ -83,7 +83,7 @@
 		    </div>
 
             <div class="links-sidebar paper2">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
+		    	<a href="GFR_Chapter.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
             <div class="links-sidebar paper1">
                 <a href="RTI.html"> <i class="material-symbols-outlined">tips_and_updates</i><p>RTI Quiz</p></a>
