--- a/AoBR_Premium.html
+++ b/AoBR_Premium.html
@@ -97,7 +97,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		    </div>
 
             <div class="links-sidebar paper2">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
+		    	<a href="GFR_Chapter.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
             <div class="links-sidebar paper2">
 		    	<a href="DFPR.html"> <i class="material-symbols-outlined">approval_delegation</i><p>DFPR Quiz</p></a>
