--- a/CCA_RuleWise.html
+++ b/CCA_RuleWise.html
@@ -77,7 +77,7 @@
 		    </div>
 
             <div class="links-sidebar">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
+		    	<a href="GFR_Chapter.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
 
             <div class="links-sidebar">
