--- a/CCS_Conduct_Rules.html
+++ b/CCS_Conduct_Rules.html
@@ -81,7 +81,7 @@
 		    </div>
 
             <div class="links-sidebar paper2">
-		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR quiz</p></a>
+		    	<a href="GFR_Chapter.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR quiz</p></a>
 		    </div>
 
             <div class="links-sidebar paper2">
