--- a/CCA_uptoRule35.html
+++ b/CCA_uptoRule35.html
@@ -79,6 +79,9 @@
 		    <div class="links-sidebar">
 		    	<a href="AoBR_lookUp.html"> <i class="material-symbols-outlined">manage_search</i><p>AoBR Lookup</p></a>
 		    </div>
+            <div class="links-sidebar paper2">
+		    	<a href="csmop.html"> <i class="material-symbols-outlined">room_preferences</i><p>CSMOP</p></a>
+		    </div>
 
             <div class="links-sidebar">
 		    	<a href="GFR_Chapter.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR quiz</p></a>
