--- a/CurrentAffairs.html
+++ b/CurrentAffairs.html
@@ -77,6 +77,10 @@
 		    </div>
 
             <div class="links-sidebar paper2">
+		    	<a href="csmop.html"> <i class="material-symbols-outlined">room_preferences</i><p>CSMOP</p></a>
+		    </div>
+
+            <div class="links-sidebar paper2">
 		    	<a href="GFR_Quiz.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
 
