--- a/CCS_Pension_RuleWise.html
+++ b/CCS_Pension_RuleWise.html
@@ -76,6 +76,10 @@
 		    	<a href="AoBR_lookUp.html"> <i class="material-symbols-outlined">manage_search</i><p>AoBR Lookup</p></a>
 		    </div>
 
+            <div class="links-sidebar paper2">
+		    	<a href="csmop.html"> <i class="material-symbols-outlined">room_preferences</i><p>CSMOP</p></a>
+		    </div>
+
             <div class="links-sidebar">
 		    	<a href="GFR_Chapter.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
