--- a/Constitution_Quiz.html
+++ b/Constitution_Quiz.html
@@ -75,6 +75,10 @@
 		    </div>
 
             <div class="links-sidebar paper2">
+		    	<a href="csmop.html"> <i class="material-symbols-outlined">room_preferences</i><p>CSMOP</p></a>
+		    </div>
+
+            <div class="links-sidebar paper2">
 		    	<a href="GFR_Chapter.html"> <i class="material-symbols-outlined">currency_rupee</i><p>GFR Quiz</p></a>
 		    </div>
 
