--- a/PP_Quiz.html
+++ b/PP_Quiz.html
@@ -37,7 +37,7 @@
     <script src="JS/PP_Quiz.js"></script>
     <script src="JS/PP_DB.js"></script>
     <script src="JS/common.js"></script>
-    <title>GFR Quiz | Leapfrog</title>
+    <title>PP Quiz | Leapfrog</title>
 
 
 </head>
@@ -80,6 +80,10 @@
 
 		    <div class="links-sidebar paper1">
 		    	<a href="AoBR_lookUp.html"> <i class="material-symbols-outlined">manage_search</i><p>AoBR Lookup</p></a>
+		    </div>
+
+            <div class="links-sidebar paper2">
+		    	<a href="csmop.html"> <i class="material-symbols-outlined">room_preferences</i><p>CSMOP</p></a>
 		    </div>
 
             <div class="links-sidebar paper2">
