--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h4><s>Rs 1599/-</s></h4>
                         <h3 style="font-size: x-large; margin-top: 0.5rem;">Rs 749/-</h3>
                        
-                    </div> -->
+                    </div>  -->
 
       <!-- </div>
 
             </div>
         
-        </div> -->
+        </div>  -->
 
       <div class="info-container">
         <div class="info-header">Important Notice!</div>
@@ -1512,9 +1512,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       document
         .getElementById("signIn")
         .addEventListener("keydown", checkValidity1);
-      document
-        .getElementById("btn_pricing")
-        .addEventListener("click", openModal);
+      //   document
+      //     .getElementById("btn_pricing")
+      //     .addEventListener("click", openModal);
       document
         .getElementById("subQuizBtn")
         .addEventListener("click", openModal);
