--- a/index.html
+++ b/index.html
@@ -675,8 +675,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn" class="subscribeBtn">
-                    Subscribe
+                  <button disabled id="subQuizBtn" class="subscribeBtn">
+                    Subscribe (disabled)
                     <i
                       class="material-symbols-outlined"
                       style="font-size: 1.1rem; vertical-align: bottom"
@@ -722,7 +722,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn1" class="subscribeBtn">
+                  <button disabled id="subQuizBtn1" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -765,7 +765,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn11" class="subscribeBtn">
+                  <button disabled id="subQuizBtn11" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -839,7 +839,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn2" class="subscribeBtn">
+                  <button disabled id="subQuizBtn2" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -883,7 +883,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn8" class="subscribeBtn">
+                  <button disabled id="subQuizBtn8" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -960,7 +960,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn3" class="subscribeBtn">
+                  <button disabled id="subQuizBtn3" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -1004,7 +1004,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn9" class="subscribeBtn">
+                  <button disabled id="subQuizBtn9" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -1048,7 +1048,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn10" class="subscribeBtn">
+                  <button disabled id="subQuizBtn10" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -1127,7 +1127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn4" class="subscribeBtn">
+                  <button disabled id="subQuizBtn4" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -1175,7 +1175,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn5" class="subscribeBtn">
+                  <button disabled id="subQuizBtn5" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -1222,7 +1222,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn6" class="subscribeBtn">
+                  <button disabled id="subQuizBtn6" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
@@ -1271,7 +1271,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </i>
                   </a>
 
-                  <button id="subQuizBtn7" class="subscribeBtn">
+                  <button disabled id="subQuizBtn7" class="subscribeBtn">
                     Subscribe
                     <i
                       class="material-symbols-outlined"
