--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             enhanced features to better serve our LDCE aspirants. All new
             registrations will now take place on our new platform. Please visit
             the new portal at:
-            <a href="http://undersigned.netlify.app" target="_blank"
+            <a href="http://undersigned.in" target="_blank"
               >https://undersigned.netlify.app</a
             >
           </p>
@@ -1573,3 +1573,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
   </body>
 </html>
+
